Various layout and performance improvements
- fixed spacing between navbar
- made image round
- preprocess images to webp format and size
- purgecss

--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -58,6 +58,7 @@ jobs:
         run: |
           cd exampleSite && \
           hugo \
+            --environment production \
             --gc \
             --minify \
             --baseURL "${{ steps.pages.outputs.base_url }}/"          
