--- a/theme.toml
+++ b/theme.toml
@@ -23,3 +23,6 @@ features = ['scroll', 'singlepage', 'landingpage']
   author = 'runningstream'
   homepage = 'https://runningstream.github.io/hugograyscale/'
   repo = 'https://github.com/runningstream/hugograyscale'
+
+[build]
+  writeStats = true
