Make sponsor logo sizes configurable

--- a/exampleSite/hugo.toml
+++ b/exampleSite/hugo.toml
@@ -11,7 +11,10 @@ disableKinds = ["taxonomy", ]
 #    large = "logo/DaMon_logo_20yrs.png"
   [params.banner]
     image = "img/title_Seattle_panorama.jpg"
-    sponsors = ["img/sap_logo.png"]
+    [[params.banner.sponsors]]
+      name = "SAP"
+      file = "img/sap_logo.png"
+      style = "max-width: 400px"
   [params.workshop]
     number = 19
     title = "Data Management on New Hardware (DaMoN)"
